Update 2. Hardware Security.md

--- a/2. Hardware Security.md
+++ b/2. Hardware Security.md
@@ -25,3 +25,40 @@ Mitigation strategies involve:
 - Compiler modifications.  
 - **Kernel Page Table Isolation (KPTI)**: Isolating kernel memory.  
 - Microcode updates.
+
+### Introduction to Bluetooth
+
+Bluetooth is a wireless technology standard for short-distance data transfer between fixed and mobile devices, operating in the 2.402 GHz to 2.480 GHz ISM band. It serves as a wireless alternative to RS-232 cables and is widely used in smartphones, laptops, audio devices, and IoT devices, with shipments expected to exceed 7 billion by 2026.
+
+#### Key Concepts
+- **Device Pairing**: The process begins with discovery, where one device broadcasts its presence. A second device sends a pairing request, followed by mutual authentication using a shared secret (link key).
+- **Piconets**: Once paired, devices form a piconet, consisting of one main device and up to seven active clients, with the main device coordinating communication.
+- **Scatternets**: Multiple piconets can form a larger network, allowing inter-piconet communication through bridging devices.
+
+#### Data Transfer
+Bluetooth supports data and audio communication via packets. There are two link types:
+- **Synchronous Connection-Oriented (SCO)**: For audio, reserving slots for steady transmission.
+- **Asynchronous Connection-Less (ACL)**: For other data types, transmitting as bandwidth allows.
+
+#### Bluetooth Risks
+Bluetooth's convenience introduces security risks, including:
+- **Unauthorized Access**: Attackers may gain access to devices, compromising sensitive information.
+- **Data Theft**: Vulnerabilities can allow unauthorized data extraction.
+- **Interference**: Shared frequency bands can lead to communication disruptions.
+- **Denial of Service (DoS)**: Overwhelming requests can render devices unresponsive.
+- **Device Tracking**: Attackers can track devices based on radio signals.
+
+#### Bluetooth Attacks
+Common Bluetooth attacks include:
+- **Bluejacking**: Sending unsolicited messages, causing privacy concerns.
+- **Bluesnarfing**: Unauthorized access to data like contacts and messages.
+- **Bluebugging**: Controlling a device remotely for malicious purposes.
+- **Car Whisperer**: Targeting vehicles to unlock doors or start engines.
+- **Bluesmacking**: A DoS attack involving excessive connection requests.
+- **Man-in-the-Middle (MitM)**: Intercepting and manipulating data between devices.
+- **BlueBorne**: A critical vulnerability allowing control without user interaction.
+- **Key Extraction**: Retrieving encryption keys to access sensitive data.
+- **Eavesdropping**: Intercepting communications to capture sensitive information.
+- **Bluetooth Impersonation Attack**: Mimicking a trusted device to gain unauthorized access.
+
+Understanding these concepts and risks is essential for effective Bluetooth security management.
